cluster/apps/debug/whoami/networkpolicies/ingress-nginx-egress-whoami.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-whoami
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: whoami
            "k8s:io.kubernetes.pod.namespace": debug
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
