cluster/apps/debug/whoami/networkpolicies/whoami.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: whoami
  namespace: debug
spec:
  endpointSelector:
    matchLabels:
      app: whoami
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
